--- a/src/components/pages/Home/PartnersStack/Slider/styles.module.scss
+++ b/src/components/pages/Home/PartnersStack/Slider/styles.module.scss
@@ -32,7 +32,6 @@
     flex-shrink: 0;
     display: flex;
     align-items: center;
-    justify-content: space-around;
     gap: 10px;
     min-width: 200%;
     animation: scroll-x var(--duration) linear infinite;
