--- a/src/components/pages/Home/Stack/styles.module.scss
+++ b/src/components/pages/Home/Stack/styles.module.scss
@@ -12,7 +12,7 @@
 .stack {
   display: flex;
   flex-direction: column;
-  padding-top: var(--spacer-9);
+  padding-top: var(--spacer-5);
   gap: var(--spacer-4);
   opacity: 0.6;
   flex-wrap: nowrap;
